Refine styles and logic In logic.js, add feedback to feedbackDisplay and use onTimeout to hide message after feedbackDuration has elapsed. Number answer choices. Add styles for answer choices. Remove redundant #answer-status p from index.html.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,6 +53,20 @@ li:nth-child(odd) {
   background-color: #f3edfc;
 }
 
+#choices {
+  padding: 0;
+}
+
+#choices li {
+  background-color: #fff;
+  list-style: none;
+}
+
+#choices button {
+  margin: 0;
+  padding: 0.5rem 1rem;
+}
+
 .wrapper {
   margin: 100px auto 0 auto;
   max-width: 600px;
